helper/apm-tester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: podinfo
  name: podinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.5.3
          ports:
            - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  namespace: podinfo
  name: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
