helper/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - apm.mertyakan.com
      secretName: apm-server-tls
  rules:
    - host: apm.mertyakan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-server-apm-http
                port:
                  number: 8200
